# edgetx

.github/: pull.yml
radio/src/: CMakeLists.txt  edgetx.h
radio/src/boards/generic_gd32/: module_ports.cpp
radio/src/boards/generic_gd32/linker/: common_sections.ld  firmware.ld
radio/src/boards/generic_gd32/linker/gd32f330xb/: layout.ld
radio/src/boards/generic_gd32/startup/: startup_gd32f3x0.s
radio/src/hal/: gpio.h
radio/src/storage/yaml/: CMakeLists.txt
radio/src/targets/c7mini/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  hal.h
radio/src/targets/common/arm/gd32/: CMakeLists.txt  abnormal_reboot.cpp  board_common.h  cpu_id.cpp  flash_driver.cpp  gd32_adc.cpp  gd32_adc.h  gd32_cmsis.h  gd32_exti_driver.cpp  gd32_exti_driver.h  gd32_gpio.cpp  gd32_gpio.h  gd32_gpio_driver.cpp  gd32_gpio_driver.h  gd32_stdlib.h  module_timer_driver.h  pwr_driver.cpp
radio/src/targets/common/arm/gd32/f3x0/: CMakeLists.txt
radio/src/targets/common/arm/stm32/: CMakeLists.txt
